# Filler

./: README.md
Filler/: CMakeLists.txt  Filler  Makefile  filler.trace  ggavryly.filler  test.txt
Filler/include/: filler.h
Filler/libft/: ggavryly.filler
Filler/libft/include/: libft.h.gch
Filler/libft/src/: get_next_line.c
Filler/src/: free.c  main.c  parse.c  read.c  solve.c  solve_2.c  start.c
include/: filler.h
libft/include/: libft.h
libft/src/: get_next_line.c
src/: free.c  main.c  parse.c  read.c  solve.c  solve_2.c  start.c
